# reversi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: bitboard.rs  duel.rs  duel42.rs  duel5.rs  hash.rs  league.rs  tune.rs  tune4.rs  tune42.rs
src/: lib.rs  main.rs  reversi.rs  stat.rs  wasm.rs
src/reversi/: asciiboard.rs  bitboard.rs  gm.rs  hash.rs  player.rs  rand.rs  sprint.rs  util.rs
src/reversi/player/: alphabeta.rs  alphabeta2.rs  alphabeta3.rs  alphabeta4.rs  alphabeta42.rs  alphabeta5.rs  best.rs  cli.rs  random.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.ts  main.tsx  style.css
web/src/components/: Board.test.tsx  Board.tsx  Controls.test.tsx  Controls.tsx  ScoreBoard.test.tsx  ScoreBoard.tsx  StatusLine.test.tsx  StatusLine.tsx  UndoButton.test.tsx  UndoButton.tsx
web/src/game/: bits.test.ts  bits.ts  reducer.test.ts  reducer.ts  types.test.ts  types.ts
web/src/hooks/: useReversiGame.test.ts  useReversiGame.ts
web/src/test/: setup.ts
web/src/wasm/: reversiWasm.test.ts  reversiWasm.ts
