[package]
name = "reversi"
version = "0.1.0"
authors = ["tubo28"]
edition = "2021"

[dependencies]

[lib]
name = "reversi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "league"
harness = false

[[bench]]
name = "tune"
harness = false

[[bench]]
name = "duel"
harness = false

[[bench]]
name = "tune4"
harness = false

[[bench]]
name = "bitboard"
harness = false

[[bench]]
name = "duel42"
harness = false

[[bench]]
name = "tune42"
harness = false

[[bench]]
name = "duel5"
harness = false
